# Copyright 2017-2020 Peter Williams
# Licensed under the MIT License.

[package]
name = "elfx86exts"
version = "0.0.0-dev.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = "Decode x86 binaries (ELF or MachO) and print out which instruction set extensions they use."
homepage = "https://github.com/pkgw/elfx86exts"
repository = "https://github.com/pkgw/elfx86exts"
documentation = "https://docs.rs/crate/elfx86exts"
readme = "README.md"
keywords = ["disassembly", "ELF", "MachO", "x86"]
categories = ["command-line-utilities", "development-tools::debugging", "parsing"]
license = "MIT"
edition = "2018"

[dependencies]
capstone = "^0.11"
clap = "^2.34"
object = "^0.29"
memmap = "^0.7.0"

[dev-dependencies]
assert_cmd = "2.0"
escargot = "0.5"
