# Copyright 2017-2022 Peter Williams
# Licensed under the MIT License.

[package]
name = "elfx86exts"
version = "0.6.2"
authors = ["Peter Williams <peter@newton.cx>"]
description = "Decode x86 binaries (ELF or MachO) and print out which instruction set extensions they use."
homepage = "https://github.com/pkgw/elfx86exts"
repository = "https://github.com/pkgw/elfx86exts"
documentation = "https://docs.rs/crate/elfx86exts"
readme = "README.md"
keywords = ["disassembly", "ELF", "MachO", "x86"]
categories = ["command-line-utilities", "development-tools::debugging", "parsing"]
license = "MIT"
edition = "2018"

[dependencies]
capstone = "^0.11"
clap = { version = "^4", features = ["derive"] }
object = "^0.32"
memmap = "^0.7.0"

[dev-dependencies]
assert_cmd = "2.0"
escargot = "0.5"
